meja/tests/apply-fail.stderr
File "tests/apply-fail.meja", line 3, characters 2-7:
Error: Incompatable types '_ -> _' and 'unit -> _':
Cannot unify 'int' and 'unit'.

